more work for transaction table

--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -28,23 +28,25 @@
   <div class="filter-row">
     <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter" ng-change="updateFilter()" >
       <option value="">All</option>
-      <option ng-repeat="user in allUsers" value="{{user.$value}}">{{user.$value}}
+      <option ng-repeat="user in allUsers" value="{{user}}">{{user}}
       </option>
     </select>
 
     <select name="categoryFilter" ng-model="categoryFilter" class="ui dropdown" ng-change="updateFilter()"
         id="categoryFilter" placeholder="Category">
       <option value="">All</option>
-      <option ng-repeat="category in allCategories" value="{{category.$value}}">{{category.$value}}
+      <option ng-repeat="category in allCategories" value="{{category}}">{{category}}
       </option>
     </select>
     <select name="monthFilter" ng-model="monthFilter" class="ui dropdown" id="monthFilter" ng-change="updateFilter()"
         placeholder="Month">
+      <option value="">All</option>
       <option ng-repeat="month in allMonths" value="{{month}}">{{month}}
       </option>
     </select>
     <select name="yearFilter" ng-model="yearFilter" class="ui dropdown" id="yearFilter" ng-change="updateFilter()"
         placeholder="Year">
+      <option value="">All</option>
       <option ng-repeat="year in allYears" value="{{year}}">{{year}}
       </option>
     </select>
@@ -64,10 +66,10 @@
       <td>
         <div class="ui form">
           <div class="grouped fields">
-            <div class="field" ng-repeat="user in allUsers" ng-init="u = user.$value">
+            <div class="field" ng-repeat="user in allUsers">
               <div class="ui checkbox">
-                <input type="checkbox" ng-model="newTransaction.usersInput[u]" name="{{u}}" value="{{u}}">
-                <label>{{u}}</label>
+                <input type="checkbox" ng-model="newTransaction.usersInput[user]" name="{{user}}" value="{{user}}">
+                <label>{{user}}</label>
               </div>
             </div>
           </div>
