--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
 
+    <script src="javascripts/external/ng-currency.js" type="text/javascript"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
 
     <script src="javascripts/external/Chart.min.js"></script>
