some basic summary stuff, move filter out

--- a/public/javascripts/summary/summaryTemplate.html
+++ b/public/javascripts/summary/summaryTemplate.html
@@ -1,3 +1,31 @@
 <div class="summary-wrapper">
 summary
+<filter></filter>
+{{matching}}
+
+</br>
+
+YTD by user:
+{{userYTD}}
+
+</br>
+
+YTD by category:
+{{categoryYTD}}
+
+</br>
+
+MTD by user:
+{{userMTD}}
+
+</br>
+
+MTD by category:
+{{categoryMTD}}
+
+</br>
+----
+</br>
+</br>
+{{transactions}}
 </div>
