--- a/public/javascripts/transactionTable/transactionTableTemplate.html
+++ b/public/javascripts/transactionTable/transactionTableTemplate.html
@@ -25,7 +25,8 @@
   </div>
 
   <!-- FILTERING///////////////////////////////////////////////////////////////-->
-  <div class="filter-row">
+  <filter></filter>
+<!--   <div class="filter-row">
     <select name="userFilter" ng-model="userFilter" class="ui dropdown" id="userFilter" ng-change="updateFilter()" >
       <option value="">All</option>
       <option ng-repeat="user in allUsers" value="{{user}}">{{user}}
@@ -50,7 +51,7 @@
       <option ng-repeat="year in allYears" value="{{year}}">{{year}}
       </option>
     </select>
-  </div>
+  </div> -->
 
   <!-- TRANSACTIONS////////////////////////////////////////////////////////////-->
   <table class="transaction-table ui single line celled table">
