--- a/public/index.html
+++ b/public/index.html
@@ -48,18 +48,19 @@
 
     <!-- Modules -->
     <script src="javascripts/transactionTable/transactionTableDirective.js" type="text/javascript"></script>
-    <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
-    <script src="javascripts/transactionTable/transactionHeaders.html" type="text/html"></script>
+    <!-- <script src="javascripts/transactionTable/transactionTableTemplate.html" type="text/html"></script>
+    <script src="javascripts/transactionTable/transactionHeaders.html" type="text/html"></script> -->
     <script src="javascripts/navigation/navDirective.js" type="text/javascript"></script>
-    <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script>
+    <script src="javascripts/filtering/filterDirective.js" type="text/javascript"></script>
+    <!-- <script src="javascripts/navigation/navTemplate.html" type="text/html" ></script> -->
     <script src="javascripts/piggyBar/piggyDirective.js" type="text/javascript"></script>
-    <script src="javascripts/piggyBar/piggyTemplate.html" type="text/html" ></script>
+    <!-- <script src="javascripts/piggyBar/piggyTemplate.html" type="text/html" ></script> -->
     <script src="javascripts/settings/settingsDirective.js" type="text/javascript"></script>
-    <script src="javascripts/settings/settingsTemplate.html" type="text/html" ></script>
+    <!-- <script src="javascripts/settings/settingsTemplate.html" type="text/html" ></script> -->
     <script src="javascripts/summary/summaryDirective.js" type="text/javascript"></script>
-    <script src="javascripts/summary/summaryTemplate.html" type="text/html" ></script>
+    <!-- <script src="javascripts/summary/summaryTemplate.html" type="text/html" ></script> -->
     <script src="javascripts/upload/uploadDirective.js" type="text/javascript"></script>
-    <script src="javascripts/upload/uploadTemplate.html" type="text/html" ></script>
+    <!-- <script src="javascripts/upload/uploadTemplate.html" type="text/html" ></script> -->
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" type="text/css" href="stylesheets/external/semantic/semantic.css" />
