login stuff and date fix

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,12 @@
       // Initialize Firebase
       // http://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public
       var config = {
-      apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
-      authDomain: "budgeting-41eaa.firebaseapp.com",
-      databaseURL: "https://budgeting-41eaa.firebaseio.com",
-      storageBucket: "budgeting-41eaa.appspot.com",
+        apiKey: "AIzaSyA4SGo3-kOlpIVroI5tQomW90SHAPgylaM",
+        authDomain: "budgeting-41eaa.firebaseapp.com",
+        databaseURL: "https://budgeting-41eaa.firebaseio.com",
+        projectId: "budgeting-41eaa",
+        storageBucket: "budgeting-41eaa.appspot.com",
+        messagingSenderId: "64733246869"
       };
       firebase.initializeApp(config);
     </script>
