--- a/public/javascripts/navigation/navTemplate.html
+++ b/public/javascripts/navigation/navTemplate.html
@@ -2,4 +2,16 @@
   <div class="nav-link nav-link-{{$index}}" ng-click="navigate(pair[1])" ng-repeat="pair in links">
     <div>{{pair[0]}}</div>
   </div>
+
+  <div class="ui labeled input">
+    <div class="ui label">Email:</div>
+    <input type="text" ng-model="email">
+  </div>
+
+  <div class="ui labeled input">
+    <div class="ui label">Password:</div>
+    <input type="password" ng-model="password">
+  </div>
+
+  <button ng-click="login()" class="add-button positive ui button">Login</button>
 </div>
