--- a/public/javascripts/navigation/navTemplate.html
+++ b/public/javascripts/navigation/navTemplate.html
@@ -3,15 +3,17 @@
     <div>{{pair[0]}}</div>
   </div>
 
-  <div class="ui labeled input">
-    <div class="ui label">Email:</div>
-    <input type="text" ng-model="email">
-  </div>
+  <div class="login">
+    <div class="ui labeled input email">
+      <div class="ui label">Email:</div>
+      <input type="text" ng-model="email">
+    </div>
 
-  <div class="ui labeled input">
-    <div class="ui label">Password:</div>
-    <input type="password" ng-model="password">
-  </div>
+    <div class="ui labeled input password">
+      <div class="ui label">Password:</div>
+      <input type="password" ng-model="password">
+    </div>
 
-  <button ng-click="login()" class="add-button positive ui button">Login</button>
+    <button ng-click="login()" class="add-button positive ui button">Login</button>
+  </div>
 </div>
