--- a/public/javascripts/upload/uploadTemplate.html
+++ b/public/javascripts/upload/uploadTemplate.html
@@ -1,6 +1,6 @@
 <div class="upload-wrapper">
   <input type="file" id="file" name="file" accep=".csv"/>
-  <button ng-click="upload()">Upload</button>
+  <button ng-click="upload()" class="add-button positive ui button">Upload</button>
   <button ng-click="addTransactions()" class="add-button positive ui button">Add</button>
 
   <!-- TRANSACTIONS////////////////////////////////////////////////////////////-->
