--- a/public/javascripts/navigation/navTemplate.html
+++ b/public/javascripts/navigation/navTemplate.html
@@ -3,7 +3,7 @@
     <div>{{pair[0]}}</div>
   </div>
 
-  <div class="login">
+  <div class="login" ng-hide="isLoggedIn()">
     <div class="ui labeled input email">
       <div class="ui label">Email:</div>
       <input type="text" ng-model="email">
