--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -9,14 +9,14 @@
           chart-data="combinedMonthData" chart-labels="combinedMonthLabels">
         </canvas>
           <h2>{{currentMonth}}</h2>
-          Total:
+          Total: {{combinedMonthTotal}}
       </div>
       <div class="col">
         <canvas id="combined-year" class="chart chart-doughnut"
           chart-data="combinedYearData" chart-labels="combinedYearLabels">
         </canvas>
           <h2>Year</h2>
-          Total:
+          Total: {{combinedYearTotal}}
       </div>
     </div>
 
@@ -27,14 +27,14 @@
           chart-data="tianMonthData" chart-labels="tianMonthLabels">
         </canvas>
           <h2>{{currentMonth}}</h2>
-          Total:
+          Total: {{tianMonthTotal}}
       </div>
       <div class="col">
         <canvas id="tian-year" class="chart chart-doughnut"
           chart-data="tianYearData" chart-labels="tianYearLabels">
         </canvas>
           <h2>Year</h2>
-          Total:
+          Total: {{tianYearTotal}}
       </div>
     </div>
 
@@ -45,14 +45,14 @@
           chart-data="joeMonthData" chart-labels="joeMonthLabels">
         </canvas>
           <h2>{{currentMonth}}</h2>
-          Total:
+          Total: {{joeMonthTotal}}
       </div>
       <div class="col">
         <canvas id="joe-year" class="chart chart-doughnut"
           chart-data="joeYearData" chart-labels="joeYearLabels">
         </canvas>
           <h2>Year</h2>
-          Total:
+          Total: {{joeYearTotal}}
       </div>
     </div>
     <!-- <h1>{{currentBudgetMonth}}</h1>
