change pie charts to bar charts

--- a/public/javascripts/piggyBar/piggyTemplate.html
+++ b/public/javascripts/piggyBar/piggyTemplate.html
@@ -5,14 +5,14 @@
     <h1>Combined</h1>
     <div class="row">
       <div class="col">
-        <canvas id="combined-month" class="chart chart-doughnut"
+        <canvas id="combined-month" class="chart chart-bar"
           chart-data="combinedMonthData" chart-labels="combinedMonthLabels">
         </canvas>
-          <h2>{{currentMonth}}</h2>
+          <h2>Month: {{currentMonth}}</h2>
           Total: {{combinedMonthTotal.toFixed(2)}}
       </div>
       <div class="col">
-        <canvas id="combined-year" class="chart chart-doughnut"
+        <canvas id="combined-year" class="chart chart-bar"
           chart-data="combinedYearData" chart-labels="combinedYearLabels">
         </canvas>
           <h2>Year</h2>
@@ -23,14 +23,14 @@
     <h1>Tian</h1>
     <div class="row">
       <div class="col">
-        <canvas id="tian-month" class="chart chart-doughnut"
+        <canvas id="tian-month" class="chart chart-bar"
           chart-data="tianMonthData" chart-labels="tianMonthLabels">
         </canvas>
-          <h2>{{currentMonth}}</h2>
+          <h2>Month: {{currentMonth}}</h2>
           Total: {{tianMonthTotal.toFixed(2)}}
       </div>
       <div class="col">
-        <canvas id="tian-year" class="chart chart-doughnut"
+        <canvas id="tian-year" class="chart chart-bar"
           chart-data="tianYearData" chart-labels="tianYearLabels">
         </canvas>
           <h2>Year</h2>
@@ -41,14 +41,14 @@
     <h1>Joe</h1>
     <div class="row">
       <div class="col">
-        <canvas id="joe-month" class="chart chart-doughnut"
+        <canvas id="joe-month" class="chart chart-bar"
           chart-data="joeMonthData" chart-labels="joeMonthLabels">
         </canvas>
-          <h2>{{currentMonth}}</h2>
+          <h2>Month: {{currentMonth}}</h2>
           Total: {{joeMonthTotal.toFixed(2)}}
       </div>
       <div class="col">
-        <canvas id="joe-year" class="chart chart-doughnut"
+        <canvas id="joe-year" class="chart chart-bar"
           chart-data="joeYearData" chart-labels="joeYearLabels">
         </canvas>
           <h2>Year</h2>
