--- a/public/javascripts/transactionTable/transactionRow.html
+++ b/public/javascripts/transactionTable/transactionRow.html
@@ -1,17 +1,62 @@
-<td>{{renderDate(data.date)}}</td>
-
-<td>
+<td ng-if="!isSelected">
+  {{renderDate(data.date)}}
+</td>
+<td ng-if="!isSelected">
   <div class="tag" ng-repeat="user in data.users">{{user}}</div>
 </td>
-
-<td>{{data.description}}</td>
-
-<td><pre>{{padAmount(data.amount)}}</pre></td>
-
-<!-- Category -->
-<td><span class="tag category-tag" ng-repeat="category in data.categories | orderBy: 'category'">{{category}}</span></td>
-<td ng-if="showDelete">
+<td ng-if="!isSelected">
+  {{data.description}}
+</td>
+<td ng-if="!isSelected">
+  <pre>{{padAmount(data.amount)}}</pre>
+</td>
+<td ng-if="!isSelected">
+  <span class="tag category-tag" ng-repeat="category in data.categories | orderBy: 'category'">{{category}}</span>
+</td>
+<td ng-if="showDelete && !isSelected">
   <button class="ui basic button delete-button" ng-click="deleteConfirmation(transaction.$id)">
     <i class="fa fa-times" aria-hidden="true"></i>
   </button>
+</td>
+
+
+
+<td ng-if="isSelected">
+  <div class="ui input">
+    <input class="year-input" type="text" ng-keypress="inputKeypress($event)" ng-model="selected.year">
+    <input class="month-input" type="text" ng-keypress="inputKeypress($event)" ng-model="selected.month">
+    <input class="day-input" type="text" ng-keypress="inputKeypress($event)" ng-model="selected.day">
+  </div>
+</td>
+<td ng-if="isSelected">
+  <div class="ui form">
+    <div class="grouped fields">
+      <div class="field" ng-repeat="user in allUsers">
+        <div class="ui checkbox">
+          <input type="checkbox" ng-model="selected.usersInput[user]" name="{{user}}" value="{{user}}">
+          <label>{{user}}</label>
+        </div>
+      </div>
+    </div>
+  </div>
+</td>
+
+<td ng-if="isSelected">
+  <div class="ui input">
+    <input type="text" ng-keypress="inputKeypress($event)" ng-model="selected.description">
+  </div>
+</td>
+<td ng-if="isSelected">
+  <div class="ui input">
+    <!--input class="amount-input" type="number" step='0.01' ng-keypress="inputKeypress($event)" ng-model="transaction.amount"-->
+    <input type="text" ng-keypress="inputKeypress($event)" ng-model="selected.amount" ng-currency currency-symbol=""/>
+  </div>
+</td>
+<td ng-if="isSelected">
+  <div class="ui input">
+    <input type="text" ng-keypress="inputKeypress($event)" ng-model="selected.categories">
+  </div>
+</td>
+<td ng-if="isSelected">
+  <button ng-click="saveSelected()" class="add-button positive ui button">+</button>
 </td>
