--- a/public/javascripts/transactionTable/transactionHeaders.html
+++ b/public/javascripts/transactionTable/transactionHeaders.html
@@ -3,6 +3,7 @@
   <th>Users</th>
   <th>Description</th>
   <th>Amount</th>
-  <th>Category</th>
+  <th>Primary</th>
+  <th>Secondary</th>
   <th ng-if="showDelete"></th>
 </tr>
